--- a/2018-1101-GAN.ipynb
+++ b/2018-1101-GAN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "norman-confusion",
+   "id": "collective-somerset",
    "metadata": {},
    "source": [
     "\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proud-surprise",
+   "id": "ruled-belle",
    "metadata": {},
    "source": [
     "### 용어요약"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "little-hampshire",
+   "id": "large-arbitration",
    "metadata": {},
    "source": [
     "$z_i$: 노이즈자료\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "threatened-logging",
+   "id": "retained-filename",
    "metadata": {},
    "source": [
     "$y_i$: 디스크리미네이터가 받는 입력자료. 그러니까 $\\{x_i\\}$와 $\\{G_{\\theta_g}(z_i)\\}$를 합친것. "
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "identical-contemporary",
+   "id": "studied-possible",
    "metadata": {},
    "source": [
     "$\\theta_d$: 디스크리미네이터가 만든 심층망의 파라메터값"
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "found-carrier",
+   "id": "regulation-valuable",
    "metadata": {},
    "source": [
     "$D_{\\theta_d}(y_i)$: 디스크리미네이터가 만든 심층망의 출력 (0 or 1)"
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "foreign-friend",
+   "id": "theoretical-bridges",
    "metadata": {},
    "source": [
     "### 제너레이터"
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "filled-division",
+   "id": "arabic-lounge",
    "metadata": {},
    "source": [
     "\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lined-union",
+   "id": "electrical-monitor",
    "metadata": {},
    "source": [
     "### 디스크리미네이터"
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collaborative-blend",
+   "id": "valid-cooler",
    "metadata": {},
    "source": [
     "(#) 제너레이터와 별도로 디스크리미네이터는 입력으로 $\\{x_i\\}$ 혹은 $\\{G_{\\theta_g}(z_i)\\}$를 받는다. \n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "statistical-issue",
+   "id": "loving-basket",
    "metadata": {},
    "source": [
     "(#) $\\{x_i\\}$는 총 $n$개 있고, $\\{G_{\\theta_g}(z_i)\\}$역시 총 $n$개가 있으므로 $\\{y_i\\}$는 $2n$개가 있을 것이다. "
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "steady-hello",
+   "id": "every-unknown",
    "metadata": {},
    "source": [
     "(#) 디스크리미네이터는 입력이 $\\{x_i\\}$일 경우에는 1을 출력하고 입력이 $\\{G_{\\theta_g}(z_i)\\}$일 경우에는 0을 출력하는 함수 $D_{\\theta_d}(y_i)$를 학습한다. \n",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quality-split",
+   "id": "indoor-distribution",
    "metadata": {},
    "source": [
     "(#) 따라서 $D_{\\bf \\theta_d}(y_i)$가 자료 $\\{y_i\\}:=\\{x_i\\} \\cup \\{G_{\\bf \\theta_g}(z_i)\\}$으로부터 파라메터 $\\theta_d$를 잘 학습했다면 $D_{\\bf \\theta_d}(y_i)$는 아래와 같은 성질을 가져야 한다. \n",
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "occupied-effectiveness",
+   "id": "silver-huntington",
    "metadata": {},
    "source": [
     "(#) 디스크리미네이터의 관점에서 보자. 디스크리미네이터는\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "insured-setting",
+   "id": "unauthorized-sound",
    "metadata": {},
    "source": [
     "### 싸움"
@@ -184,31 +184,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "behind-salad",
+   "id": "technical-denial",
    "metadata": {},
    "source": [
     "(#) 앞에서 말한것 처럼 디스크리미네이터는 아래식을 만족하는 $\\bf \\theta_d$를 찾고 싶어한다. 이때 $\\theta_g$는 고정된 값이다. \n",
     "\n",
-    "$\n",
-    "\\underset{\\theta_d}{\\operatorname{argmin}}\\frac{1}{n}\\sum_{i=1}^{n} \\left[ \\log D_{\\theta_d}(x_i) +\\log \\left(1- D_{\\theta_d}(G_{\\theta_g}(z_i)) \\right) \\right] \n",
-    "$\n"
+    "$\\underset{\\theta_d}{\\operatorname{argmin}}\\frac{1}{n}\\sum_{i=1}^{n} \\left[ \\log D_{\\theta_d}(x_i) +\\log \\left(1- D_{\\theta_d}(G_{\\theta_g}(z_i)) \\right) \\right]$\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "technical-atlantic",
+   "id": "international-survival",
    "metadata": {},
    "source": [
     "(#) 반면에 제너레이터는 $D_{\\theta_d}(G_{\\theta_g}(z_i))$값들이 커야지 학습이 잘 된 것이고 볼 수 있다. 즉 제너레이터는 아래식을 만족하는 $\\theta_g$를 찾고 싶어한다. 이때 $\\theta_d$는 고정된 값이다.  \n",
     "\n",
-    "$\n",
-    "\\underset{\\bf \\theta_d}{\\operatorname{argmin}}\\frac{1}{n}\\sum_{i=1}^{n} \\log \\left(1-D_ {\\bf \\theta_d}(G_{\\bf \\theta_g}(z_i))\\right)\n",
-    "$"
+    "$\\underset{\\bf \\theta_d}{\\operatorname{argmin}}\\frac{1}{n}\\sum_{i=1}^{n} \\log \\left(1-D_ {\\bf \\theta_d}(G_{\\bf \\theta_g}(z_i))\\right)$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "sorted-stopping",
+   "id": "brilliant-blink",
    "metadata": {},
    "source": [
     "(#) 우리가 원하는 것은 \n",
@@ -220,21 +216,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "attended-airfare",
+   "id": "oriental-borough",
    "metadata": {},
    "source": [
     "(#) 이안굿펠로우는 요걸 달성하기 위해서 아래를 구하면 된다고 주장한다. \n",
     "\n",
-    "$\n",
-    "\\underset{G_{\\theta_g}}{\\operatorname{argmin}} \\max_{D_{\\theta_d}} V(D_{\\theta_d},G_{\\theta_g})\n",
-    "$\n",
+    "$\\underset{G_{\\theta_g}}{\\operatorname{argmin}} \\max_{D_{\\theta_d}} V(D_{\\theta_d},G_{\\theta_g})$\n",
     "\n",
     "여기에서 \n",
     "\n",
     "\n",
-    "$\n",
-    "V(D_{\\theta_d},G_{\\theta_g})=E_{x \\sim p_{data}}[\\log D_{ \\theta_d}(x)] + E_{z \\sim p_z(z)}[\\log (1-D_{\\theta_d}(G_{\\theta_g}(z))]\n",
-    "$\n",
+    "$V(D_{\\theta_d},G_{\\theta_g})=E_{x \\sim p_{data}}[\\log D_{ \\theta_d}(x)] + E_{z \\sim p_z(z)}[\\log (1-D_{\\theta_d}(G_{\\theta_g}(z))]$\n",
     "\n",
     "이다. \n",
     "\n",
@@ -250,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "realistic-ownership",
+   "id": "superb-roommate",
    "metadata": {},
    "source": [
     "\n",
@@ -266,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "professional-gates",
+   "id": "amazing-watch",
    "metadata": {},
    "outputs": [],
    "source": []
