--- a/2000-0101-파이썬.md
+++ b/2000-0101-파이썬.md
@@ -1,27 +1,27 @@
 ### About this doc 
 
-(#) 이 포스팅은 파이썬의 자료형에 대하여 다룬다. 1
+`-` 이 포스팅은 파이썬의 자료형에 대하여 다룬다. 1
 
-(#) 0D를 스칼라로 1D는 벡터로 정의하였다. 
+`-` 0D를 스칼라로 1D는 벡터로 정의하였다. 
 
 ### 0차원 자료형
 
-(#) 0차원 자료형에는 `int`, `float`, `bool` 이 있다. 각 자료형끼리의 변환은 아래와 같이 한다. 
+`-` 0차원 자료형에는 `int`, `float`, `bool` 이 있다. 각 자료형끼리의 변환은 아래와 같이 한다. 
 ```python
 int(3.14)
 float(3)
 int(True)
 ```
 
-(#) 자료형 `str` 은 0차원 자료형으로 볼 수도 있고 1차원 자로형으로 볼 수 도 있다. 
+`-` 자료형 `str` 은 0차원 자료형으로 볼 수도 있고 1차원 자로형으로 볼 수 도 있다. 
 
 ### 1차원 자료형
 
-(#) 1차원 자료형에는 `list`, `tuple`, `dict`, `set`, `np.array` 가 있다. 
+`-` 1차원 자료형에는 `list`, `tuple`, `dict`, `set`, `np.array` 가 있다. 
 
-(#) 자료형 `str` 은 1차원 자료형으로 볼수도 있고 0차원 자료형으로 볼 수 도 있다. 
+`-` 자료형 `str` 은 1차원 자료형으로 볼수도 있고 0차원 자료형으로 볼 수 도 있다. 
 
-(#)  이 중 `list`, `tuple`, `dict`, `np.array` 는 원소로 모든 자료형태를 받을 수 있다. 여기에서 모든 자료형태란 `int`, `float`, `bool`, `str` 와 같은 0차원 자료형을 포함하여 `list`, `tuple`, `dict`, `set`, `np.array` 와 같은 1차원 자료형, 그리고 심지어 `np.matrix`, `pd.DataFrame` 와 같은 2차원 자료형도 포함한다. 
+`-`  이 중 `list`, `tuple`, `dict`, `np.array` 는 원소로 모든 자료형태를 받을 수 있다. 여기에서 모든 자료형태란 `int`, `float`, `bool`, `str` 와 같은 0차원 자료형을 포함하여 `list`, `tuple`, `dict`, `set`, `np.array` 와 같은 1차원 자료형, 그리고 심지어 `np.matrix`, `pd.DataFrame` 와 같은 2차원 자료형도 포함한다. 
 ```python
 list1=[1,3.14,True,'a',
       [1,2],(1,2),{'name':'guebin','age':37},{1,2,3},np.array([1,2,3]),
@@ -38,13 +38,13 @@ nparray1=np.array(list1)
 nparray2=np.array(tuple1) 
 ```
 
-(#)  각 자료형으로의 변환은 아래와 같이 한다.
+`-`  각 자료형으로의 변환은 아래와 같이 한다.
 ```python
 tuple(list1)
 list(tuple1)
 ```
 
-(#) 아래와 같은 방식을 쓰면 `dict` 의 key, value, (key,value)를 각각 `list` 로 변환가능하다. 
+`-` 아래와 같은 방식을 쓰면 `dict` 의 key, value, (key,value)를 각각 `list` 로 변환가능하다. 
 ```python
 list(dict1.keys())
 list(dict1.values())
@@ -52,29 +52,29 @@ list(dict1.items())
 ```
 
 
-(#) `list` 와 `tuple` 의 우수한점은 +, * 연산으로 배열을 자유롭게 확장할 수 있다는 것이다. `dict` 의 우수한 점은 indexing 이며 `set` 의 우수한 점은 집합연산을 쓸 수 있다는 것이다. 결국 잘 생각해보면 `list` 와 `tuple`은 자료를 `추가저장`하는데 특화되어있다. 온라인으로 실시간으로 계속 자료를 쌓아야 한다면 `list`와 `tuple`자료형이 매우 좋다. 반면 `데이터프레임`처럼 사용하려면 `dict`자료형이 좋다. 
+`-` `list` 와 `tuple` 의 우수한점은 +, * 연산으로 배열을 자유롭게 확장할 수 있다는 것이다. `dict` 의 우수한 점은 indexing 이며 `set` 의 우수한 점은 집합연산을 쓸 수 있다는 것이다. 결국 잘 생각해보면 `list` 와 `tuple`은 자료를 `추가저장`하는데 특화되어있다. 온라인으로 실시간으로 계속 자료를 쌓아야 한다면 `list`와 `tuple`자료형이 매우 좋다. 반면 `데이터프레임`처럼 사용하려면 `dict`자료형이 좋다. 
 
-(#) `np.array`, `list`, `tuple` 사이에는 서로간에 완벽한 자료호환이 가능하다. 
+`-` `np.array`, `list`, `tuple` 사이에는 서로간에 완벽한 자료호환이 가능하다. 
 ```python
 np.array(list(tuple(np.array(list1))))
 ```
 
 
-(#) `range(0,10)` 역시 1차원 자료형으로 보는것이 해석에 용이하다. 
+`-` `range(0,10)` 역시 1차원 자료형으로 보는것이 해석에 용이하다. 
 
-(#) 결국 1차원 자료형의 가장 좋은 형태는 `list` 혹은 `np.array` 이다. 자료를 추가 혹은 삭제할때는 `list` 가 좋지만 넘파이연산을 할때는 `np.array`가 좋다. 특히 `for` 문에서 아래와 같이 `list` 혹은 `np.array` 를 활용 할 수 있다. 
+`-` 결국 1차원 자료형의 가장 좋은 형태는 `list` 혹은 `np.array` 이다. 자료를 추가 혹은 삭제할때는 `list` 가 좋지만 넘파이연산을 할때는 `np.array`가 좋다. 특히 `for` 문에서 아래와 같이 `list` 혹은 `np.array` 를 활용 할 수 있다. 
 ```python
 for i in list1: print(i)
 for i in np.array(list1): print(i)
 ```
 
-(#) 여기에서 언급된 모든 1차원 자료형은 `len()` 함수를 활용하여 그 크기를 출력할 수 있다. 
+`-` 여기에서 언급된 모든 1차원 자료형은 `len()` 함수를 활용하여 그 크기를 출력할 수 있다. 
 
 ### 2차원 자료형
 
-(#) 2차원 자료형은 `.shape` 를 통하여 크기를 출력할 수 있다. 이중에서 `np.array` 는 `len()` 함수를 써서도 크기를 출력할 수 있다. 
+`-` 2차원 자료형은 `.shape` 를 통하여 크기를 출력할 수 있다. 이중에서 `np.array` 는 `len()` 함수를 써서도 크기를 출력할 수 있다. 
 
-(#) 어떠한 1차원 자료형의 각 원소가 모두 같은 length를 가지는 1차원 자료형이라고 하자. 즉 
+`-` 어떠한 1차원 자료형의 각 원소가 모두 같은 length를 가지는 1차원 자료형이라고 하자. 즉 
 \begin{align}
 {\bf M}=\big({\bf m}_ 1,{\bf m}_ 2,{\bf m}_ 3\big)=\big((m_{11},m_{12},m_{13}),(m_{21},m_{22},m_{23}),(m_{31},m_{32},m_{33})\big)
 \end{align}
@@ -83,7 +83,7 @@ for i in np.array(list1): print(i)
 M=np.asmatrix(([1,2,3],(4,5,6),np.array(['a','b','c'])))
 ```
 
-(#) 각 row의 length 만 맞으면 되므로 아래와 같이 괴상한 형태의 2차원 자료형도 정의가능하다. 
+`-` 각 row의 length 만 맞으면 되므로 아래와 같이 괴상한 형태의 2차원 자료형도 정의가능하다. 
 ```python
 M1=np.asmatrix([[M,1,2],[2,3,4],[3,3,3]])
 M2=pd.DataFrame([[M,1,2],[2,3,4],[3,3,3]])
@@ -91,7 +91,7 @@ M1[0,0]
 M2.iloc[0,0]
 ```
 
-(#) 2차원 자료형이라도 $1\times p$ 매트릭스나 $n\times 1$ 매트릭스는 1차원 자료형으로 볼 수 있다(당연한 걸 쓰고 있는 멍청이가 된 기분임). 그런데 2차원 자료의 row-vector 혹은 col-vector 를 `list()` 나 `tuple()` 을 써서 1차원 자료형으로 다시 바꿀 수 있는 것이 쉽지는 않다. 그 이유는 1차원 자료형의 각 원소에는 ($1\times p$ 매트릭스나 $n\times 1$ 매트릭스를 포함한) 어떠한 자료형도 올 수 있어 `list(rowvec)` 와 같은 식의 명령어로는 길이가 1인 list가 만들어져 그 첫번째 원소에 row-vector가 그대로 들어가기 때문이다. 좀 더 구체적 설명을 위해 아래와 같이 매트릭스를 만들었다고 상상해보자. 
+`-` 2차원 자료형이라도 $1\times p$ 매트릭스나 $n\times 1$ 매트릭스는 1차원 자료형으로 볼 수 있다(당연한 걸 쓰고 있는 멍청이가 된 기분임). 그런데 2차원 자료의 row-vector 혹은 col-vector 를 `list()` 나 `tuple()` 을 써서 1차원 자료형으로 다시 바꿀 수 있는 것이 쉽지는 않다. 그 이유는 1차원 자료형의 각 원소에는 ($1\times p$ 매트릭스나 $n\times 1$ 매트릭스를 포함한) 어떠한 자료형도 올 수 있어 `list(rowvec)` 와 같은 식의 명령어로는 길이가 1인 list가 만들어져 그 첫번째 원소에 row-vector가 그대로 들어가기 때문이다. 좀 더 구체적 설명을 위해 아래와 같이 매트릭스를 만들었다고 상상해보자. 
 ```python 
 A=np.matrix([[1,2,3],[4,5,6],[7,8,9]])
 ```
